--- a/iPhone/Axis Viewer/RootViewCell.xib
+++ b/iPhone/Axis Viewer/RootViewCell.xib
@@ -61,7 +61,7 @@
 							</object>
 							<object class="IBUILabel" id="954984089">
 								<reference key="NSNextResponder" ref="752290970"/>
-								<int key="NSvFlags">292</int>
+								<int key="NSvFlags">298</int>
 								<string key="NSFrame">{{65, 7}, {235, 36}}</string>
 								<reference key="NSSuperview" ref="752290970"/>
 								<bool key="IBUIOpaque">NO</bool>
@@ -70,7 +70,7 @@
 								<string key="IBUIText">Label</string>
 								<object class="NSFont" key="IBUIFont">
 									<string key="NSName">Helvetica</string>
-									<double key="NSSize">1.900000e+01</double>
+									<double key="NSSize">1.700000e+01</double>
 									<int key="NSfFlags">16</int>
 								</object>
 								<object class="NSColor" key="IBUITextColor">
@@ -79,7 +79,8 @@
 								</object>
 								<nil key="IBUIHighlightedColor"/>
 								<int key="IBUIBaselineAdjustment">1</int>
-								<float key="IBUIMinimumFontSize">1.000000e+01</float>
+								<bool key="IBUIAdjustsFontSizeToFit">NO</bool>
+								<float key="IBUIMinimumFontSize">1.400000e+01</float>
 							</object>
 						</object>
 						<string key="NSFrameSize">{320, 50}</string>
@@ -211,7 +212,7 @@
 				</object>
 			</object>
 			<nil key="sourceID"/>
-			<int key="maxID">7</int>
+			<int key="maxID">8</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<object class="NSMutableArray" key="referencedPartialClassDescriptions">
